# a2a

./: README.md
Orchestrator/: .env  .env.example  README.md  agents.local.json  pyproject.toml
Orchestrator/app/agents/: diagnoser.py  fixer.py  support.py
Orchestrator/app/core/: a2a_models.py  gemini.py
Orchestrator/app/orchestrator/: executor.py  registry.py
Orchestrator/app/server/: agent_server.py
Orchestrator/app/ui/: app.py
Orchestrator/orchestrator_a2a_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
